--- a/ui/index.html
+++ b/ui/index.html
@@ -285,7 +285,10 @@
                                 <input type="password" id="browser-password" placeholder="Your password">
                             </div>
 
-                            <button id="start-browser-auth-btn" class="btn btn-primary btn-block">Sign In</button>
+                            <button id="start-browser-auth-btn" class="btn btn-primary btn-block">
+                                <span class="btn-text">Sign In</span>
+                                <span class="btn-loader"></span>
+                            </button>
 
                             <!-- Challenge section (hidden by default) -->
                             <div id="browser-challenge-section" style="display:none;">
@@ -294,7 +297,10 @@
                                     <label for="browser-challenge-input">Verification Response</label>
                                     <input type="text" id="browser-challenge-input" placeholder="Enter code or requested info">
                                 </div>
-                                <button id="submit-browser-challenge-btn" class="btn btn-primary btn-block">Submit</button>
+                                <button id="submit-browser-challenge-btn" class="btn btn-primary btn-block">
+                                    <span class="btn-text">Submit</span>
+                                    <span class="btn-loader"></span>
+                                </button>
                             </div>
 
                             <div id="browser-auth-error" class="error-message"></div>
